Try to reduce memory use